<resources>
    <string name="app_name">CheaperApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">الرئيسية</string>
    <string name="ProfilePage">الصفحة الشخصية</string>
    <string name="SellerData">بيانات المعلن</string>
    <string name="MakeOffer">الإعلان عن تخفيض</string>
    <string name="MyAds">إعلاناتى</string>
    <string name="Markets">المتاجر</string>
    <string name="Categories">اقسام المنتجات</string>
    <string name="NotificationForOffer">طلب إشعار بتوفر عرض</string>
    <string name="ContactUs">تواصل معنا</string>
    <string name="SignOut">تسجيل الخروج</string>
    <string name="SignIn">تسجيل الدخول</string>

    <string name="Or">أو</string>
    <string name="ContinueWithFacebook">متابعة بحساب فيسبوك</string>
    <string name="Name"> اسم المستخدم</string>
    <string name="MailOrPhon">رقم الهاتف أو البريد الإلكتروني </string>
    <string name="Password">كلمة المرور</string>
    <string name="DidYouForgetYourPassword">هل نسيت كلمة السر ؟</string>
    <string name="Enter">دخول</string>
    <string name="newuser">متابعة بحساب</string>

    <string name="AreYouNewUser">هل أنت جديد على أرخصلى ؟</string>
    <string name="DoYouHaveAccount">هل لديك حساب بالفعل ؟</string>
    <string name="CreateNewAccount">إنشاء حساب</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="Email">البريد الإلكترونى</string>
    <string name="PhoneNumber">رقم الجوال</string>
    <string name="ConfirmPassword">تأكيد كلمة المرور</string>
    <string name="Signup">تسجيل</string>
    <string name="ImageSuccessfullyChoosed">تم اختيار الصورة بنجاح</string>
    <string name="ImageFailedChoosed">لم يتم اختيار الصورة بنجاح!!</string>
    <string name="ChooseImage">اختيار الصورة</string>
    <string name="ImageChooseOptions">هل تريد التقاط صورة لك ام اختيار صورة من الاستوديو ؟</string>
    <string name="TakePhoto">التقاط صورة</string>
    <string name="Cancel">إلغاء</string>
    <string name="SendPasswordEmail">يرجى كتابة البريد الإلكترونى الخاص بك</string>
    <string name="Send">إرسال</string>
    <string name="PasswordSentSuccess">لقد تم إرسال كلمة السر لك بنجاح</string>
    <string name="title_activity_home_fragment">HomeFragmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="AllAds">كل الإعلانات</string>
    <string name="TodayAds">إعلانات اليوم</string>
    <string name="product_name">اسم المنتج</string>
    <string name="product_image">صورة المنتج</string>
    <string name="store_name">اسم المتجر</string>
    <string name="description">الوصف</string>
    <string name="ChooseCategory">اختر القسم</string>
    <string name="ChooseOfferDuration">فترة العرض</string>
    <string name="ChooseBranches">افرع العرض</string>
    <string name="Ok">تم</string>
    <string name="Next">التالى</string>


    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--   navigation drawer list-->
    <string name="HOME_PAGE">الصفحه الرئيسيه</string>
    <string name="SIGN_IN">تسجيل الدخول</string>
    <string name="SIGN_OUT">تسجيل الخروج</string>
    <string name="Notification"> الاشعارات</string>
    <string name="Stores">المتاجر</string>
    <string name="Departments">اقسام المنتجات</string>
    <string name="Search">البحث </string>
    <string name="Contact_us">تواصل معنا </string>

    <!--   Departments Types list-->
    <string name="MobilesAndAcsseories">الموبايلات والاكسسوارات</string>
    <string name="watches">الساعات والاكسسوارات</string>
    <string name="JewelleryAndAccessories">المجوهرات والاكسسوارات</string>
    <string name="ShoesAndBags"> الشنط والاحذيه</string>

    <!-- product details-->
    <string name="Product">المنتج</string>
    <string name="store">المتجر</string>
    <string name="product_descriptions">المواصفات</string>
    <string name="Price_Bfore">السعر قبل العرض</string>
    <string name="Price_Aftter">السعر بعد العرض</string>
    <string name="Price_Bfore_offer">السعر قبل الخصم</string>
    <string name="Price_Aftter_offer">السعر بعد الخصم</string>
    <string name="SorrySigninFirstToCall">عفوا قم بتسجيل الدخول حتى يمكنك الاتصال</string>
    <string name="NewAccount">حساب جديد</string>
    <!-- Advertiser data ENTRY-->
    <string name="storename">اسم المتجر</string>
    <string name="branchname">اسم الفرع</string>

    <string name="storeimg">واجهة المتجر</string>
    <string name="storeaddres">عنوان المتجر</string>
    <string name="branchaddres">عنوان الفرع </string>

    <string name="addres">العنوان وفقا ل Gps</string>
    <string name="LimitedOffer">العرض سارى حتى نفاذ الكمية</string>
    <string name="StartDateUntilOfferEnd">تاريخ بداية وحتى نفاذ الكمية</string>
    <string name="StartandEndDate">تاريخ بداية و تاريخ نهاية</string>
    <string name="StartDate">تاريخ البداية</string>
    <string name="EndDate">تاريخ النهاية</string>
    <string name="Allbranches">كل الفروع</string>
    <string name="google_maps_api_key">AIzaSyC6FXmsYsUqwTSIaM_DF5FzPrrj0Jw8DUA</string>


    <string name="SaveChanges">حفظ التغيرات</string>
    <string name="AddBranch">اضافه فرع</string>

    <string-array name="Country">
        <item>المدينه</item>
        <item>القاهره</item>
        <item>الاسكندريه</item>
        <item>المنصوره</item>
        <item>الجيزه</item>
        <item>دمياط</item>
        <item>المحله</item>
        <item>شرم الشيخ</item>
    </string-array>
    <string name="agreeonconditions">اوافق على الشروط والاحكام</string>
    <string name="SIGN">تسجيل</string>
    <string name="SuccessRequest">لقد تم تسجيل طلبك بنجاح</string>
    <string name="GoTo">ذهاب الى</string>
    <string name="AddAds">إضافة إعلان</string>
    <string name="MainPage">الرئيسية</string>
    <string name="NewAccountasadviser"> التسجيل كتاجر </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="facebook_app_id">421602441658380</string>
    <string name="fb_login_protocol_scheme">fb421602441658380</string>

    <string name="confirmation">تاكيد</string>
    <string name="back">رجوع</string>
    <string name="add">اضافه</string>
    <string name="save">حفظ التعديلات</string>

    <string name="categoryName">اسم القسم</string>
    <string name="productName">اسم المنتج</string>
    <string name="sellerName">اسم التاجر</string>
    <string name="productDescription">يوجد هنا وصف للنتج المعروض فى الاعلان الحالى</string>

    <!--Add Notification Layout-->
    <string name="Addnotification">طلب اشعار بتوفر العرض</string>
    <string name="choosedepartment">اختر القسم</string>
    <string name="Notification_Text">من فضلك قم بادخال المنتجات التى تود شرائها عند عمل عروض عليهاليأتيك إشعار عند توافرها على التطبيق</string>
    <string name="sendnotification">إرسال</string>
    <string name="productname">اسم المنتج</string>
    <string name="send_success">تم ارسال طلبك بنجاح</string>
    <string name="send_fail">فشل الارسال</string>

    <!--MY ADVIRTESMENT-->
    <string name="current">الحاليه</string>
    <string name="previous">السابقه</string>
    <string name="endadd">إنهاء الاعلان</string>
    <string name="showadd">اظهار الاعلان</string>
    <string name="product_description">وصف المنتج</string>
    <string name="storelocation">عنوان الفرع</string>
    <string name="storenumber">رقم الفرع</string>
    <string name="addnotification">اضافه اشعار</string>
    <string name="showproduct">اظهار المنتج</string>
    <string name="deleteproduct">حذف المنتج</string>


    <string name="CompanyEmail">info@corefix.org</string>
    <string name="ForgetPasswordSubject">ForgetPassword</string>
    <string name="YourMessage">قم بادخال رسالتك التى تريد كتابتها</string>
    <string name="checkInternert">تحقق من اتصالك بالانترنت !!</string>
    <string name="errorParsing">Error while parsing!!</string>
    <string name="commpleteinfo">من فضلك ادخل جميع البيانات</string>
    <string name="chooseimagewarning">قم بتعين صورتك الشخصيه اولا</string>
    <string name="TryAgainError">من فضلك اعد المحاوله حدض خطا ما..</string>

</resources>
