<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/mybtn_style2"
        android:paddingRight="5dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SendPasswordEmail"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/userEmail_Edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/mail"
            android:drawablePadding="5dp"/>


        <Button
            android:id="@+id/send_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mybtn_style"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Send"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="italic|normal|bold" />

</LinearLayout>

