<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendPasswordEmail"
        android:textColor="@color/red"
        android:textSize="16dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <EditText
            android:id="@+id/email_dialog_Edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/Email"
            android:inputType="text"
            android:layoutDirection="rtl"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send_dialog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Send"
        android:background="@drawable/mybtn_style"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold" />


</LinearLayout>