<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="20dp">


        <ImageView
            android:id="@+id/user_ImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_home_black_24dp"
            android:scaleType="fitXY"/>





        <EditText
            android:id="@+id/name_Edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Name"
            android:inputType="text"

            android:maxLines="1"
            android:singleLine="true"
            android:paddingRight="10dp"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/ic_home_black_24dp"
            android:layoutDirection="rtl"
            android:drawablePadding="5dp"/>


        <EditText
            android:id="@+id/email_Edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Email"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_home_black_24dp"

            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:layout_marginTop="30dp"
            android:drawableRight="@drawable/ic_home_black_24dp"
            android:layoutDirection="rtl"
            android:drawablePadding="5dp"/>


        <EditText
            android:id="@+id/phone_Edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/PhoneNumber"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_home_black_24dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:layout_marginTop="30dp"
            android:drawableRight="@drawable/ic_home_black_24dp"
            android:layoutDirection="rtl"
            android:drawablePadding="5dp"/>


        <EditText
            android:id="@+id/password_Edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Password"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_home_black_24dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:layout_marginTop="30dp"
            android:drawableRight="@drawable/ic_home_black_24dp"
            android:layoutDirection="rtl"
            android:drawablePadding="5dp"/>


        <EditText
            android:id="@+id/retypePassword_Edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/ConfirmPassword"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_home_black_24dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:layout_marginTop="30dp"
            android:drawableRight="@drawable/ic_home_black_24dp"
            android:layoutDirection="rtl"
            android:drawablePadding="5dp"/>



        <Button
            android:id="@+id/signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Signup"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>



    </LinearLayout>


</ScrollView>