<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="18">


        <ImageView
            android:id="@+id/user_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/userpic" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <EditText
                android:id="@+id/name_Edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:drawablePadding="5dp"
                android:hint="@string/Name"
                android:inputType="text"
                android:layoutDirection="rtl"
                android:maxLines="1"
                android:paddingRight="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <EditText
                android:id="@+id/email_Edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:hint="@string/Email"
                android:inputType="text"
                android:layoutDirection="rtl"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <EditText
                android:id="@+id/phone_Edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:hint="@string/PhoneNumber"
                android:inputType="text"
                android:layoutDirection="rtl"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <EditText
                android:id="@+id/password_Edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:hint="@string/Password"
                android:inputType="text"
                android:layoutDirection="rtl"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <EditText
                android:id="@+id/retypePassword_Edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:hint="@string/ConfirmPassword"
                android:inputType="text"
                android:layoutDirection="rtl"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Signup"
            android:background="@drawable/mybtn_style"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layoutDirection="rtl">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/DoYouHaveAccount" />

            <TextView
                android:id="@+id/haveAccount_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignIn"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>